--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+ nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 5px;
+  overflow: hidden;
+}
+
+nav li {
+  float: left;
+  padding-left: 10px;
+}
+
+.info_container {
+  border: 2px solid black;
+}
