--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Index of Users</h1>
+
+<%= link_to 'Create New User', new_user_path%>
+<% @users.each do |user| %>
+  <div class='info_container'>
+    <h3><%= link_to user.name, edit_user_path(user.id) %></h3>
+    <p><%= link_to 'Delete', user_path(user.id), method: 'delete' %></p>
+    <p><strong>Email:</strong><%= user.email %></p>
+    <p><strong>Admin:</strong><%= user.admin %></p>
+  </div>
+<% end %>
