--- a/app/views/airplanes/edit.html.erb
+++ b/app/views/airplanes/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Airplanes#edit</h1>
-<p>Find me in app/views/airplanes/edit.html.erb</p>
+<h1>Edit <%= @airplane.name %></h1>
+<hr>
+<%= render partial: 'form' %>
