--- a/app/views/airplanes/new.html.erb
+++ b/app/views/airplanes/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Airplanes#new</h1>
-<p>Find me in app/views/airplanes/new.html.erb</p>
+<h1>Create New Airplane</h1>
+<hr>
+<%= render partial: 'form' %>
