--- a/app/views/flights/edit.html.erb
+++ b/app/views/flights/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Flights#edit</h1>
-<p>Find me in app/views/flights/edit.html.erb</p>
+<h1>Edit <%= @flight.flight_number %></h1>
+<hr>
+<%= render partial: 'form' %>
