--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Flights#show</h1>
-<p>Find me in app/views/flights/show.html.erb</p>
+<h1>Flight <%= @flight.flight_number %></h1>
+<%= link_to 'Edit', edit_flight_path(@flight.id) %>
+<p><strong>From: </strong><%= @origin.name %></p>
+<p><strong>To: </strong><%= @destination.name %></p>
+<p><strong>Date: </strong><%=@flight.date %></p>
+<p><strong>Airplane: </strong><%= link_to @airplane.name, airplane_path(@airplane.id) %></p>
