--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
   <body>
     <nav>
       <ul>
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Users', users_path %></li>
-        <li><%= link_to 'Airplanes', airplanes_path %></li>
-        <li><%= link_to 'Flights', flights_path %></li>
+        <% if @current_user.present? %>
+          <li>Hello <%= @current_user.name %></li>
+          <li><%= link_to 'Logout', login_path, method: 'delete' %></li>
+          <li><%= link_to 'Home', root_path %></li>
+          <li><%= link_to 'Users', users_path %></li>
+          <li><%= link_to 'Airplanes', airplanes_path %></li>
+          <li><%= link_to 'Flights', flights_path %></li>
+          <% else %>
+          <li><%= link_to 'Login',  login_path %></li>
+          <% end %>
       </ul>
       <hr>
     </nav>
