Added security measures so only admins can login to the backend

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to the Back End!</h1>
+<h1>Welcome to the Burning Airlines Control Panel</h1>
 
 <p>Backend page for Burning Airlines. You can create, edit and destroy:</p>
 <ul>
@@ -6,5 +6,3 @@
   <li>Flights</li>
   <li>Users</li>
 </ul>
-
-<p>We'll see if I have time to impliment a login system</p>
